<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="eLightMode" Id="{d116aa5f-91b8-497d-b6b0-320babf754aa}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eLightMode :
(
	Init,
	Run,
	Shutdown,
	Error
	
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>