<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_ServiceModule" Id="{c2b68249-78b4-4ae5-91f5-9de9a918b256}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ServiceModule
VAR_INPUT
END_VAR
VAR_OUTPUT
	eCondition : eConditionCheck;
	eState : eHighLevelState;
	
END_VAR
VAR
	fbDistanceSensor : FB_DistanceSensor;
	fbBoxLED : FB_BoxLED;
	fbRGBController : FB_RGBController;
	
	eDistanceSensorLastMessage : eErrorList := eErrorList.NoError;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbDistanceSensor();
fbBoxLED();
fbRGBController();

//Condition
IF fbDistanceSensor.eCondition = eConditionCheck.READY THEN
	eCondition := eConditionCheck.READY;
	
	eDistanceSensorLastMessage := eErrorList.NoError;
ELSE
	eCondition := eConditionCheck.INIT;
	
	IF fbDistanceSensor.eErrorID <> eDistanceSensorLastMessage THEN
		eDistanceSensorLastMessage := fbDistanceSensor.eErrorID;
		IF fbDistanceSensor.eErrorID <> eErrorList.NoError THEN
			MainControl.fbErrorHandling.fbErrorBufferDistanceSensor.AddErrorMessage(eErrorMessage := fbDistanceSensor.eErrorID);
		END_IF
	END_IF
	
END_IF
	


//High Level State Machine
CASE MainControl.eMainState OF
	eMainStateMachine.READY :
		setLightMode := eLightMode.Init;
		setLEDColor := eColor.BLUE;
		
		eState := eHighLevelState.OPERATIONAL;
	//
	eMainStateMachine.OPERATIONAL :
		setLightMode := eLightMode.Run;
		setLEDColor := eColor.GREEN;
		MyGVLData.lrDistanceSensorServiceModule := getDistanceSensor;
		
		eState := eHighLevelState.SHUTDOWN;
	//
	eMainStateMachine.SHUTDOWN :
		setLightMode := eLightMode.Shutdown;
		setLEDColor := eColor.RED;
		
		eState := eHighLevelState.READY;
	
	

END_CASE]]></ST>
    </Implementation>
    <Property Name="getDistanceSensor" Id="{2fac17f2-5502-4e29-a71f-8cb1ada492f0}">
      <Declaration><![CDATA[PROPERTY getDistanceSensor : LREAL]]></Declaration>
      <Get Name="Get" Id="{75a6997a-d806-4312-8a14-3897a8c10414}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[getDistanceSensor := fbDistanceSensor.getDistance;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="setLEDColor" Id="{6a7a5b5a-09c5-425d-940e-affb3aa3c15d}">
      <Declaration><![CDATA[PROPERTY setLEDColor : eColor]]></Declaration>
      <Set Name="Set" Id="{02d5a0ad-12c3-404f-90d8-434fa682923b}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[fbRGBController.setLEDColor := setLEDColor;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="setLightMode" Id="{ddaddde0-b0ca-494f-8421-9a4aaeadd879}">
      <Declaration><![CDATA[PROPERTY setLightMode : eLightMode]]></Declaration>
      <Set Name="Set" Id="{005729d2-e110-431a-93b1-2e7c9d259192}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[fbBoxLED.setLightMode := setLightMode;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <LineIds Name="FB_ServiceModule">
      <LineId Id="9" Count="0" />
      <LineId Id="57" Count="1" />
      <LineId Id="23" Count="3" />
      <LineId Id="146" Count="0" />
      <LineId Id="145" Count="0" />
      <LineId Id="27" Count="1" />
      <LineId Id="100" Count="0" />
      <LineId Id="122" Count="1" />
      <LineId Id="126" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="153" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="119" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="42" Count="1" />
      <LineId Id="19" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="62" Count="1" />
      <LineId Id="59" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="69" Count="1" />
      <LineId Id="72" Count="2" />
      <LineId Id="76" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="45" Count="0" />
    </LineIds>
    <LineIds Name="FB_ServiceModule.getDistanceSensor.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_ServiceModule.setLEDColor.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_ServiceModule.setLightMode.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>